# openenv-conflict-resolver-v2

./: .gitignore  Dockerfile  README.md  __init__.py  blog.md  client.py  doc.md  hackathon_checklist.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-inference.txt  requirements-train.txt  requirements.txt  reward_strategy.md  videocontext.md
docs/: 01_foundations.md  02_what_is_rl.md  03_building_the_environment.md  04_reward_engineering.md  05_training_pipeline.md  05b_why_sft_before_grpo.md  06_inference_and_logging.md  07_deployment.md  08_full_architecture.md
notebooks/: train_grpo_colab.ipynb
scripts/: render_results_chart.py  train_grpo_stub.py
server/: app.py
src/assistant_conflict_env/: __init__.py  conflict_generator.py  environment.py  eval_set.py  graders.py  models.py  server.py  server_main.py  tasks.py
src/assistant_conflict_env/fixtures/: conflict_cases.json
src/assistant_conflict_env/static/: index.html
tests/: test_environment.py  test_graders.py  test_world_state.py
